--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">opencvTest</string>
+    <string name="app_name">ThirdEye</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 </resources>
